--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -20,4 +20,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('../assets/background/bg1.jpeg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
